# sleepmoney

./: .gitignore  README.md  agent.md  main.py  pyproject.toml  sleepmoney-v0.md
src/assembly/: editor.py
src/assets/: audio.py  visuals.py
src/content/: harvester.py  narrative_engine.py  prompts.py  writer.py
src/discovery/: engine.py
src/utils/: llm.py
